# routers/system.go
@@ -1,0 +1,17 @@
+package routers
+
+import (
+	"goVueBlog/api"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterSystemUrls(r *gin.RouterGroup) {
+
+	systemApi := api.NewSystemMenuApi()
+	systemUrls := r.Group("/systemMenu")
+	{
+		systemUrls.GET("", systemApi.SystemMenuList)
+
+	}
+}
